--- a/index.html
+++ b/index.html
@@ -9,7 +9,31 @@
 </head>
 <body>
     <main>
-
+        <header></header>
+    <main>
+        <section class="main-section">
+        <div class="container">
+            <h2 class="page-title py-rem">Log in</h2>
+            <div id="userInfo" class="user-info py-rem hidden">
+            <h3>Привіт <span id="userName"></span>! Ти вже авторизований в системі.</h3>
+            <br>
+            <button id="logout">Вийти</button>
+            </div>
+            <form id="mainForm" class="py-rem hidden">
+            <fieldset class="py-rem">
+                <legend>Інформація про користувача</legend>
+                <label class="py-rem">
+                <span>Ім'я:</span>
+                <input id="nameField" name="name" type="text" placeholder="Введіть ваше ім'я" required>
+                </label>
+            </fieldset>
+            <br>
+            <button type="submit">Зберегти</button>
+            </form>
+        </div>
+        </section>
+    </main>
+    <footer></footer>
     </main>
     <script src="./js/script.js"></script>
 </body>
