--- a/index.html
+++ b/index.html
@@ -1,16 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="fonts/fonts.css">
-    <link rel="stylesheet" href="styles/styles.css">
-    <title>Document</title>
-</head>
-<body>
-    <main>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+        <link rel="stylesheet" href="styles/styles.css">
+    </head>
+    <body>
+        <header>
+        <div class="container">
+            <div class="wrapper d-flex">
+            <div class="left">
+                <p>TopFilms</p>
+            </div>
+            <div class="right">
+                <form action="" method="get">
+                <label for="search">Search:
+                    <input type="search" name="search" id="search" placeholder="search here">
+                </label>
+                </form>
+            </div>
+            </div>
+        </div>
+        </header>
 
-    </main>
-    <script src="./js/script.js"></script>
-</body>
+        <main>
+        <div class="box-container">
+            <div class="box-wrapper d-flex">
+            
+            </div>
+        </div>
+        </main>
+
+        <footer></footer>
+    <script src="js/movies.js"></script>
+    <script src="js/script.js"></script>
+    </body>       
 </html>
